<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment2ab</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="detailActivity">Kontaktdetaljer</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="instruction_enter_contact_details">Redigera kontaktens uppgifter</string>

    <!--hints-->
    <string name="hint_name">Namn</string>
    <string name="hint_age">Ålder</string>
    <string name="hint_description">Beskrivning</string>
    <string name="hint_image_url">Bildadress</string>

    <!--buttons-->
    <string name="button_edit">Spara ändringar</string>
    <string name="button_done">Färdig</string>

    <!--error messages-->
    <string name="error_name">Fyll i ett namn</string>
    <string name="error_age">Fyll i en ålder</string>
    <string name="error_url">Ogiltig webbadress</string>
    <string name="error_description">Fyll i något som du vet om kontakten</string>

    <!--actions-->
    <string name="action_contact_save">Färdig</string>
    <string name="action_create_contact">Skapa kontakt</string>
    <string name="action_delete_contacts">Radera kontakter</string>
    <string name="action_edit_contact">Redigera kontaktuppgifter</string>
    <string name="action_sort_contacts">Sortera kontakter</string>

    <string name="exception_implement_interface"> måste implementera OnContactSelectedListener</string>
</resources>
